--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                      <p>
                         User-Centered Design (UCD) is essential for designers as it focuses on meeting user needs and creating intuitive, enjoyable experiences. By understanding users' goals and preferences, designers can craft designs that resonate with their audience and deliver exceptional user experiences. UCD enhances usability, user satisfaction, and engagement while promoting empathy and inclusivity in design.
                      </p>
-                     <a href="http://127.0.0.1:5500/ucd.html">See More !</a>
+                     <a href="/ucd.html">See More !</a>
                   </div>
                </div>
                <div class="blog-box">
@@ -345,7 +345,7 @@
                   <div class="blog-text">
                      <h3>Front-end Development</h3>
                      <p>Front-end development is crucial for creating engaging, intuitive user interfaces. It brings designs to life, optimizes performance, and ensures seamless user interactions. Skilled front-end developers enhance user experience, optimize website performance, and make digital content accessible to all.</p>
-                     <a href="http://127.0.0.1:5500/front-enddevelopment.html">See More !</a>
+                     <a href="/front-enddevelopment.html">See More !</a>
                   </div>
                </div>
                <div class="blog-box">
@@ -355,7 +355,7 @@
                   <div class="blog-text">
                      <h3>Media Production</h3>
                      <p>Media production plays a significant role in today's digital landscape. It enables the creation and distribution of compelling visual and audio content that captivates and engages audiences. From videos and podcasts to graphics and animations, media production is essential for storytelling, brand communication, and reaching a wider audience. It allows businesses, organizations, and individuals to convey their messages effectively and leave a lasting impact in a visually-driven world.</p>
-                     <a href="http://127.0.0.1:5500/mediaproduction.html">See More !</a>
+                     <a href="/mediaproduction.html">See More !</a>
                   </div>
                </div>
                <div class="blog-box">
