--- a/front-enddevelopment.html
+++ b/front-enddevelopment.html
@@ -191,13 +191,13 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                      <li><a href="http://127.0.0.1:5500/#home" class="active">Home</a></li>
-                      <li><a href="http://127.0.0.1:5500/#about">About me</a></li>
-                      <li><a href="http://127.0.0.1:5500/#goals">Goals</a></li>
-                      <li><a href="#http://127.0.0.1:5500/#portfolio">Works</a></li>
-                      <li><a href="http://127.0.0.1:5500/#learningoutcomes">Learning Outcomes</a></li>
-                      <li><a href="http://127.0.0.1:5500/#others">Courses</a></li>
-                      <li><a href="http://127.0.0.1:5500/#contact">Contact</a></li>
+                      <li><a href="/#home" class="active">Home</a></li>
+                      <li><a href="/#about">About me</a></li>
+                      <li><a href="/#goals">Goals</a></li>
+                      <li><a href="#/#portfolio">Works</a></li>
+                      <li><a href="/#learningoutcomes">Learning Outcomes</a></li>
+                      <li><a href="/#others">Courses</a></li>
+                      <li><a href="/#contact">Contact</a></li>
     
                     </ul>
                 </div>
