--- a/thankpage.html
+++ b/thankpage.html
@@ -29,13 +29,13 @@
               </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="/index.html#home" class="active">Home</a></li>
-                        <li><a href="index.html#about">About me</a></li>
-                        <li><a href="index.html#goals">Goals</a></li>
-                        <li><a href="index.html#portfolio">Works</a></li>
-                        <li><a href="index.html#learningoutcomes">Learning Outcomes</a></li>
-                        <li><a href="index.html#weeklychallages">Weekly Challanges</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="/#home" class="active">Home</a></li>
+                        <li><a href="/#about">About me</a></li>
+                        <li><a href="/#goals">Goals</a></li>
+                        <li><a href="#/#portfolio">Works</a></li>
+                        <li><a href="/#learningoutcomes">Learning Outcomes</a></li>
+                        <li><a href="/#others">Courses</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
