--- a/front-enddevelopment.html
+++ b/front-enddevelopment.html
@@ -191,13 +191,13 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                      <li><a href="/#home" class="active">Home</a></li>
-                      <li><a href="/#about">About me</a></li>
-                      <li><a href="/#goals">Goals</a></li>
-                      <li><a href="#/#portfolio">Works</a></li>
-                      <li><a href="/#learningoutcomes">Learning Outcomes</a></li>
-                      <li><a href="/#others">Courses</a></li>
-                      <li><a href="/#contact">Contact</a></li>
+                      <li><a href="#home" class="active">Home</a></li>
+                      <li><a href="#about">About me</a></li>
+                      <li><a href="#goals">Goals</a></li>
+                      <li><a href="#portfolio">Works</a></li>
+                      <li><a href="#learningoutcomes">Learning Outcomes</a></li>
+                      <li><a href="#others">Skills</a></li>
+                      <li><a href="#contact">Contact</a></li>
     
                     </ul>
                 </div>
