--- a/thankpage.html
+++ b/thankpage.html
@@ -29,7 +29,7 @@
               </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#home" class="active">Home</a></li>
+                        <li><a href="/#home" class="active">Home</a></li>
                         <li><a href="#about">About me</a></li>
                         <li><a href="#goals">Goals</a></li>
                         <li><a href="#portfolio">Works</a></li>
