--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                   <li><a href="#about">About me</a></li>
                   <li><a href="#goals">Goals</a></li>
                   <li><a href="#portfolio">Works</a></li>
-                  <li><a href="#learningoutcomes">Learning Outcomes</a></li>
                   <li><a href="#others">Skills</a></li>
                   <li><a href="#contact">Contact</a></li>
 
@@ -52,7 +51,8 @@
                   <h1>Mo Rafeq</h1>
                   <h3>I'm Media Design & Smart Mobile student</h3>
                   <div class="cv-btn">
-                     <a href="Resume_Mohammed_Rafeq.pdf">Donwload CV</a>
+                     <a href="Resume_Mohammed_Rafeq.pdf" target="_blank">Viwe CV</a> 
+                     <a href="https://git.fhict.nl/I490014/my-wiki/-/wikis/home" target="_blank">Visit My GitWiki!</a> 
                   </div>
                </div>
             </div>
@@ -220,103 +220,7 @@
          </div>
       </div>
    </section>
-   
-   <section class="blog" id="learningoutcomes">
-      <div class="container">
-         <div class="row">
-            <div class="title text-center">
-               <h1>Learning Outcomes</h1>
-            </div>
-         </div>
-         <div class="row">
-            <div class="blog-content">
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/media.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3>Interactive Media:</h3>
-                     <p>Interactive media is digital content that allows for user interaction, such as websites, mobile apps, video games, and virtual reality experiences. It uses multimedia to create engaging experiences and has transformed how we consume digital content.</p>
-                  </div>
-               </div>
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/development.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3>Development:</h3>
-                     <p>Development is the process of creating or improving a product, system, or what ever through planning, design, implementation, and testing. It involves a team of professionals with specialized skills, effective communication, and collaboration to create a valuable product.</p>
-                  </div>
-               </div>
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/research.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3>Research:</h3>
-                     <p>Research is a structured process of collecting and analyzing data to answer questions or solve problems in different fields. It involves developing research questions, collecting data, analyzing it, and presenting findings. The ultimate goal is to generate or improve knowledge.</p>
-                  </div>
-               </div>
-
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/design.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3> Design:</h3>
-                     <p>Design is the process of planning the aesthetic and functional aspects of a product, system, or environment. It involves stages such as research, ideation, prototyping, testing, and refinement to create visually appealing and functional products that meet user needs.</p>
-                  </div>
-               </div>
-
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/communication.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3>Communication:</h3>
-                     <p>Communication is the exchange of information or ideas through speech, writing, or non-verbal cues. Effective communication requires clear messaging, active listening, and an understanding of the audience. It is fundamental to human interaction and essential for success in various fields.</p>
-                  </div>
-               </div>
-
-               <div class="blog-box">
-                  <div class="blog-img">
-                     <img src='./img/learningoutcomes/professionalidentity.jpeg' />
-                  </div>
-                  <div class="blog-text">
-                     <div class="blog-info">
-                        <span>Junie, 2023</span>
-                        <span>Professional</span>
-                     </div>
-                     <h3>Professional Identity:</h3>
-                     <p>Professional identity is how an individual sees themselves and is perceived by others in their professional role. It includes values, beliefs, and skills shaped by education, training, and work experience. A strong professional identity requires self-reflection, continuous learning, and ethical standards.</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-
-   
+      
    <section class="blog" id="others">
       <div class="container">
          <div class="row">
