--- a/mediaproduction.html
+++ b/mediaproduction.html
@@ -400,9 +400,16 @@
           </ul>
         </div>
         <div class="video-container">
-          <video controls>
-            <source src="img/product/studyday.mp4" type="video/mp4" />
-          </video>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/rKtpPIYazeE?si=leccjHn1vn2OqNsw"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </div>
