--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <h1>Mo Rafeq</h1>
                   <h3>I'm Media Design & Smart Mobile student</h3>
                   <div class="cv-btn">
-                     <a href="Resume_Mohammed_Rafeq.pdf" target="_blank">Viwe CV</a> 
+                     <a href="Resume_Mohammed_Rafeq.pdf" target="_blank">VIEW CV</a> 
                      <a href="https://git.fhict.nl/I490014/my-wiki/-/wikis/home" target="_blank">Visit My GitWiki!</a> 
                   </div>
                </div>
