--- a/index.html
+++ b/index.html
@@ -156,56 +156,7 @@
          </div>
       </div>
    </section>
-   <section class="portfolio" id="portfolio">
-      <div class="container">
-         <div class="row">
-            <div class="title text-center">
-               <h1>Latest Works</h1>
-            </div>
-         </div>
-         <div class="row">
-            <div class="filter-btn">
-               <ul id="filterBtn">
-                  <li class="active" data-target="all">All</li>
-                  <li data-target="web">Student Housing</li>
-                  <li data-target="app">Guess The Word</li>
-                  <li data-target="ui">Portfolio</li>
-               </ul>
-            </div>
-         </div>
-         <div class="row">
-            <div class="gallery">
-               <div class="item" data-id="web">
-                  <div class="inner">
-                     <img src="./img/works/studenthpusing.png" alt="portfolio" />
-                     <div class="overlay">
-                        <span class="fa fa-plus"></span>
-                        <h4>Student Housing</h4>
-                     </div>
-                  </div>
-               </div>
-               <div class="item" data-id="app">
-                  <div class="inner">
-                     <img src="./img/works/guessword.png" alt="portfolio" />
-                     <div class="overlay">
-                        <span class="fa fa-plus"></span>
-                        <h4>Guess The Word</h4>
-                     </div>
-                  </div>
-               </div>
-               <div class="item" data-id="ui">
-                  <div class="inner">
-                     <img src="./img/works/portfolio.png" alt="portfolio" />
-                     <div class="overlay">
-                        <span class="fa fa-plus"></span>
-                        <h4>Portfolio</h4>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
+   
    <section class="message">
       <div class="container">
          <div class="row align-items-center">
@@ -225,14 +176,14 @@
       <div class="container">
          <div class="row">
             <div class="title text-center">
-               <h1>skills</h1>
+               <h1>Projects</h1>
             </div>
          </div>
          <div class="row">
             <div class="blog-content">
                <div class="blog-box">
                   <div class="blog-img">
-                     <img src='./img/works/challange.jpeg' />
+                     <img src='./img/works/ucd.webp' />
                   </div>
                   <div class="blog-text">
                      <h3>UCD-User Center Design</h3>
@@ -244,7 +195,7 @@
                </div>
                <div class="blog-box">
                   <div class="blog-img">
-                     <img src='./img/product/front-end.jpeg' />
+                     <img src='./img/works/development.webp' />
                   </div>
                   <div class="blog-text">
                      <h3>Front-end Development</h3>
@@ -254,7 +205,7 @@
                </div>
                <div class="blog-box">
                   <div class="blog-img">
-                     <img src='./img/product/logo.jpeg' />
+                     <img src='./img/works/media_production.webp' />
                   </div>
                   <div class="blog-text">
                      <h3>Media Production</h3>
@@ -264,12 +215,22 @@
                </div>
                <div class="blog-box">
                   <div class="blog-img">
-                     <img src='./img/product/groupproject.jpeg' />
+                     <img src='./img/works/group_project.webp' />
                   </div>
                   <div class="blog-text">
                      <h3>Group Project</h3>
                      <p>Group projects are highly valuable in fostering collaboration, enhancing learning, and developing essential skills. By working together towards a common goal, group projects encourage teamwork, communication, and problem-solving abilities. They provide an opportunity to leverage diverse perspectives, share responsibilities, and pool knowledge and expertise. Group projects simulate real-world scenarios and prepare individuals for collaborative work environments, equipping them with skills that are essential for success in academic, professional, and personal contexts.</p>
-                     <a href="http://127.0.0.1:5500/groupproject.html">See More !</a>
+                     <a href="/groupproject.html">See More !</a>
+                  </div>
+               </div>
+               <div class="blog-box">
+                  <div class="blog-img">
+                     <img src='./img/works/app_dev.webp' />
+                  </div>
+                  <div class="blog-text">
+                     <h3>App Development</h3>
+                     <p>Currently, I am deeply engaged in smart mobile app development, focusing on creating innovative and efficient mobile applications using Kotlin and Flutter. My work involves designing and implementing user-friendly interfaces, ensuring optimal performance, and integrating advanced features to enhance user experience.</p>
+                     <a href="#">Ongoing !</a>
                   </div>
                </div>
             </div>
