--- a/mediaproduction.html
+++ b/mediaproduction.html
@@ -235,8 +235,7 @@
               <li><a href="/#home" class="active">Home</a></li>
               <li><a href="/#about">About me</a></li>
               <li><a href="/#goals">Goals</a></li>
-              <li><a href="/#portfolio">Works</a></li>
-              <li><a href="/#others">Skills</a></li>
+              <li><a href="/#others">Projects</a></li>
               <li><a href="/#contact">Contact</a></li>
             </ul>
           </div>
