--- a/mediaproduction.html
+++ b/mediaproduction.html
@@ -185,12 +185,12 @@
         margin: 0 auto;
       }
 
-      ul {
+      .videoexp ul {
         list-style-type: none;
         padding: 0;
       }
 
-      li {
+      .videoexp li {
         margin-bottom: 15px;
         line-height: 1.4;
         position: relative;
